# hillkeeper-bot

./: CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: keep-alive.yml
hillkeeper/: __init__.py  commands.py  config.py  messages.py  services.py  tasks.py  utils.py
hillkeeper/attendance/: repository.py  service.py
hillkeeper/bot/: commands.py  events.py  tasks.py
hillkeeper/database/: redis.py
hillkeeper/services/: attendance.py
scripts/: send_notification.py
